--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-github-users",
-  "homepage": "https://z-felixhan.github.io/react-weather-app",
+  "homepage": "https://z-felixhan.github.io/react-github-users",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
